@@ -64,6 +64,8 @@ Changes in version 0.1.2.7-alpha - 2007-??-??
     - Stop using the reserved ac_cv namespace in our configure script.
     - Call stat() slightly less often; use fstat() when possible.
     - Treat failure to parse resolv.conf as an error.
+    - Refactor the way we handle pending circuits when an OR connection
+      completes or fails, in an attempt to fix a rare crash bug.
 
   o Major features:
     - Weight directory requests by advertised bandwidth. Now we can
